--- a/poem.html
+++ b/poem.html
@@ -73,7 +73,7 @@
     <p>Let's just vibe</p>
     <p>Until our feelings thrive</p>
     <p>Let's smile and laugh together</p>
-    <p>Until we found the happily ever after</p>
+    <p>Until we find the happily ever after</p>
     <br>
     <p>You are the only one I think</p>
     <p>That's why I'm writing this with an ink</p>
