--- a/webpage.html
+++ b/webpage.html
@@ -179,7 +179,7 @@
   <div class="perks"> 
 <p>1. I can make you happy every day.</p>
 <p>2. I will there for you. I can stay and I can wait. </p>
-<p>3. You can vibes me always.</p>
+<p>3. You can vibes with me always.</p>
 <p>So what are you waiting for grab me now.</p>
   </div>
 
