--- a/webpage.html
+++ b/webpage.html
@@ -172,7 +172,7 @@
 
 
   <div class="perks">
-    <p>Perk's having me in you'r life.</p>
+    <p>Perk's having me in your life.</p>
     
   
   </div>
