--- a/webpage.html
+++ b/webpage.html
@@ -21,7 +21,7 @@
 <ul>
     <li> <a href="#">Home</a></li>
     <li> <a href="#me">About me</a></li>
-    <li> <a href="poem.html">Poem</a></li>
+    <li> <a onclick="alert('Pag nabasa motong mga tula ko para sayo.\nPwedebang wag mokong iwan :(') href="poem.html">Poem</a></li>
     <li> <a href="#hob">Hobbies</a></li>
     <li> <a href="#artist">Song's Artist that I like</a></li>
 </ul>
