--- a/webpage.html
+++ b/webpage.html
@@ -21,7 +21,7 @@
 <ul>
     <li> <a href="#">Home</a></li>
     <li> <a href="#me">About me</a></li>
-    <li> <a onclick="alert('Pag nabasa motong mga tula ko para sayo.\nPwedebang wag mokong iwan🌹❣️ ')" href="poem.html">Poem</a></li>
+    <li> <a onclick="alert('Pag nabasa mo itong mga tula ko para sayo.\nPwede bang wag mo akong iwan🌹❣️ ')" href="poem.html">Poem</a></li>
     <li> <a href="#hob">Hobbies</a></li>
     <li> <a href="#artist">Song's Artist that I like</a></li>
 </ul>
@@ -47,7 +47,7 @@
 <h5>Funny <span> & Good Boy</span></h5>
 <p>I am a 19 year old student at Bulacan State Universoty. I am originally from Malolos Bulacan. I enjoy spending my free time doing a variety of activities, including playing video games, eating, sleeping, and watching movies. These activities all help me to relax and have fun.</p>
 <nav>
-<a  onclick="alert('Dont for get to add and chat me\nMs. CALAMARES😂  ')" href="https://www.facebook.com/jimuel.magsakay.5   " target="_blank" class="knowme">Click me to know me more</a>  
+<a  onclick="alert('Dont for get to add and chat me Ms. CALAMARES😂 emz  ')" href="https://www.facebook.com/jimuel.magsakay.5   " target="_blank" class="knowme">Click me to know me more</a>  
 </nav>
 </div>
 
