--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <br>
 <br>
 <div class="Title">
-    <h2>Tara mcdo<span> sa Dec 8?</span> </h2>
+    <h2>Would you like to join me <span> for a movie night?</span> </h2>
     
     </div>
     <br>
