--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <br>
 <br>
 <div class="Title">
-    <h2>Would you like to be <span>my duo lala?</span> </h2>
+    <h2> would you be interested in being <span>my duo in Valorant? </span> </h2>
     
     </div>
     <br>
@@ -47,4 +47,8 @@
 <script src="./app.js"></script>
 
 </body>
+
+
+
+
 </html> 
