--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <br>
 <br>
 <div class="Title">
-    <h2> would you be interested in being <span>my duo in Valorant? </span> </h2>
+    <h2> would you be interested in being <span>my duo in life? </span> </h2>
     
     </div>
     <br>
