--- a/beshie.html
+++ b/beshie.html
@@ -11,29 +11,44 @@
     <div class="top-boxes">
       <div class="box">
         <div class="front"> REASON 1</div>
-        <div class="back">First of all you deserve better
-            better person who can stay forever
+        <div class="back">
+          <p>You deserve happiness, not a heartache</p>
+          <p>You deserve a star, not a hate</p>
+          <p>You deserve a blissful state</p>
+          <p>Not the shadows of a mistake</p>
         </div>
       </div>
       <div class="box">
         <div class="front">REASON 2</div>
-        <div class="back">I want to know you more
-            just let me stay forever
+        <div class="back"><p>I want to see a smile on your face</p>
+          <p>But I need to erase, the pain in your trace</p>
+          <p>With each healing embrace, i'll replace the hate</p>
+          <p>And bring joy to your heart sacred space </p>
         </div>
       </div>
       <div class="box">
         <div class="front"> REASON 3</div>
-        <div class="back">Flipped Box 3</div>
+        <div class="back"> <p>Gusto kong makita kang masaya</p>
+          <p>At laging tumatawa</p>
+          <p>Yung tipong hindi na mangangamba</p>
+          <p>Na baka mawala yung taong mahalaga</p></div>
       </div>
     </div>
     <div class="bottom-boxes">
       <div class="box">
         <div class="front">REASON 4</div>
-        <div class="back">Flipped Box 4</div>
+        <div class="back"><P>Deserve mong maging una</P>
+          <P>At hindi maging pangalawa</P>
+          <P>Deserve mong itrato ka ng tama</P>
+          <P>At bigyang halaga</P></div>
       </div>
       <div class="box">
         <div class="front">REASON 5</div>
-        <div class="back">Flipped Box 5</div>
+        <div class="back"> <p>I want to make you feel</p>
+          <p>That my intention is real</p>
+          <p>No matter what im always here</p>
+          <p>Just take your time to heal</p>
+        </div>
       </div>
     </div>
     
