--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <div class="Title">
-    <h2> would you be interested in being <span> my duo in life?</span> </h2>
+    <h2>Can I treat<span> you right?</span> </h2>
     
     </div>
     <br>
