--- a/beshie.html
+++ b/beshie.html
@@ -47,7 +47,7 @@
         <div class="back"> <p>I want to make you feel</p>
           <p>That my intention is real</p>
           <p>No matter what im always here</p>
-          <p>Just take your time to heal</p>
+          <p>Just take your time to heal.</p>
         </div>
       </div>
     </div>
