--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <div class="app">
     <div class="container">
       <div class="Title">
-        <h2>Can I stay and <span>treat you right ?</span></h2>
+        <h2>Tara kape <span> tayo?</span></h2>
        
 <br>
 <br>
       </div>
       <div class="buttonGroup">
-        <button class="button--yes">Yes</button>
-        <button class="button--no">No</button>
+        <button class="button--yes">Tara!</button>
+        <button class="button--no">Ayaw!</button>
          <br>
         <br>
         <br>
