--- a/beshie.html
+++ b/beshie.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="beshiess.css">
@@ -54,4 +54,4 @@
     
   </div>
 </body>
-</html>
+</html> -->
