--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <div class="app">
     <div class="container">
       <div class="Title">
-        <h2>Tara kape <span> tayo?</span></h2>
-       
+        
+       <h2><span> Do you like</span> talking to me?</h2>
 <br>
 <br>
       </div>
       <div class="buttonGroup">
-        <button class="button--yes">Tara!</button>
-        <button class="button--no">Ayaw!</button>
+        <button class="button--yes">Yes</button>
+        <button class="button--no">No</button>
          <br>
         <br>
         <br>
